# forecasting_employees

./: .gitignore  README.md  data.dvc  metrics.csv  models.dvc  pyproject.toml
.dvc/: config
.github/workflows/: notebook.yaml
application/src/: create_app.py  create_service.py  save_model_to_bentoml.py
config/: main_template.yaml
config/model/: model1.yaml
data/processed/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
models/: xgboost
training/src/: evaluate_model.py  helper.py  main.py  process.py  train_model.py
training/tests/: test_process.py  test_train_model.py
