[tool.poetry]
name = "forecasting_employees"
version = "0.1.0"
description = ""
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
pandas = "^2.0.3"
patsy = "^0.5.3"
scikit-learn = "^1.3.0"
hyperopt = "^0.2.7"
xgboost = "^1.7.6"
dagshub = "^0.3.2.post1"
pytest-steps = "^1.8.0"
typeguard = "^4.1.0"
pytest = "^7.4.0"
typing-extensions = "^4.7.1"
deepchecks = "^0.17.4"
torch = "^2.0.1"
pytorch-ignite = "^0.4.12"
opencv-python = "^4.8.0.74"
scikit-image = "^0.21.0"
torchvision = "^0.15.2"
mlflow = "^2.5.0"
waitress = "^2.1.2"
bentoml = "^1.1.1"
pydantic = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
